// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pages create caps should render correctly 1`] = `
<FullColumnLayout
  description="Create caps page of the Create Fares Data Service"
  errors={Array []}
  title="Create Caps - Create Fares Data Service"
>
  <CsrfForm
    action="/api/createCaps"
    csrfToken=""
    method="post"
  >
    <ErrorSummary
      errors={Array []}
    />
    <h1
      className="govuk-heading-l"
      id="create-caps-page-heading"
    >
      Create your fare caps
    </h1>
    <span
      className="govuk-hint"
      id="create-cap-hint"
    >
      If cap duration is more than a day, provide input for the cap start.
    </span>
    <div
      className="govuk-grid-row"
    >
      <fieldset
        className="govuk-fieldset"
      >
        <legend
          className="govuk-fieldset__legend govuk-visually-hidden"
        >
          Enter details for cap
        </legend>
        <div
          className="flex-container"
        >
          <div
            className="govuk-!-margin-left-4 govuk-!-margin-right-2"
          >
            <FormGroupWrapper
              errorIds={
                Array [
                  "cap-name",
                ]
              }
              errors={Array []}
            >
              <label
                className="govuk-label"
                htmlFor="cap-name"
              >
                <span
                  className="govuk-visually-hidden"
                >
                  Cap Name
                </span>
                <span
                  aria-hidden={true}
                >
                  Cap name
                </span>
              </label>
              <span
                className="govuk-hint"
                id="cap-name-hint"
              >
                50 characters max
              </span>
              <FormElementWrapper
                errorClass="govuk-input--error"
                errorId="cap-name"
                errors={Array []}
                hideText={true}
              >
                <input
                  aria-describedby="cap-name-hint"
                  className="govuk-input govuk-input--width-40 govuk-product-name-input__inner__input"
                  defaultValue=""
                  id="cap-name"
                  maxLength={50}
                  name="capName"
                  type="text"
                />
              </FormElementWrapper>
            </FormGroupWrapper>
          </div>
          <div
            className="govuk-!-margin-left-2 govuk-!-margin-right-2"
          >
            <FormGroupWrapper
              errorIds={
                Array [
                  "cap-price",
                ]
              }
              errors={Array []}
            >
              <label
                className="govuk-label"
                htmlFor="cap-price"
              >
                <span
                  className="govuk-visually-hidden"
                >
                  Cap Price, in pounds
                </span>
                <span
                  aria-hidden={true}
                >
                  Price
                </span>
              </label>
              <span
                className="govuk-hint"
                id="cap-price-hint"
              >
                e.g. 2.99
              </span>
              <div
                className="govuk-currency-input"
              >
                <div
                  className="govuk-currency-input__inner"
                >
                  <span
                    className="govuk-currency-input__inner__unit"
                  >
                    £
                  </span>
                  <FormElementWrapper
                    addFormGroupError={false}
                    errorClass="govuk-input--error"
                    errorId="cap-price"
                    errors={Array []}
                    hideText={true}
                  >
                    <input
                      aria-describedby="cap-price-hint"
                      className="govuk-input govuk-input--width-4 govuk-currency-input__inner__input"
                      data-non-numeric={true}
                      defaultValue=""
                      id="cap-price"
                      name="capPrice"
                      type="text"
                    />
                  </FormElementWrapper>
                </div>
              </div>
            </FormGroupWrapper>
          </div>
          <div
            className="govuk-!-margin-left-2 govuk-!-margin-right-2"
          >
            <FormGroupWrapper
              errorIds={
                Array [
                  "cap-period-duration-quantity",
                  "cap-period-duration-unit",
                ]
              }
              errors={Array []}
            >
              <label
                className="govuk-label"
                htmlFor="cap-period-duration"
              >
                Cap duration
              </label>
              <span
                className="govuk-hint"
                id="cap-duration-hint"
              >
                For example, 3 days
              </span>
              <div
                className="govuk-input__wrapper expiry-selector-wrapper"
              >
                <FormElementWrapper
                  errorClass="govuk-input--error"
                  errorId="cap-period-duration-quantity"
                  errors={Array []}
                  hideText={true}
                >
                  <input
                    aria-describedby="cap-duration-hint"
                    className="govuk-input govuk-input--width-3"
                    defaultValue=""
                    id="cap-period-duration-quantity"
                    name="capDuration"
                    type="text"
                  />
                </FormElementWrapper>
                <FormElementWrapper
                  errorClass="govuk-select--error"
                  errorId="cap-duration-unit"
                  errors={Array []}
                  hideText={true}
                >
                  <select
                    className="govuk-select govuk-select--width-3 expiry-selector-units"
                    defaultValue=""
                    id="cap-duration-unit"
                    name="capDurationUnits"
                  >
                    <option
                      disabled={true}
                      key="select-one"
                      value=""
                    >
                      Select One
                    </option>
                    <option
                      key="day"
                      value="day"
                    >
                      Days
                    </option>
                    <option
                      key="week"
                      value="week"
                    >
                      Weeks
                    </option>
                    <option
                      key="month"
                      value="month"
                    >
                      Months
                    </option>
                  </select>
                </FormElementWrapper>
              </div>
            </FormGroupWrapper>
          </div>
        </div>
        <div
          className="govuk-!-margin-left-2 govuk-!-margin-right-2 govuk-!-margin-top-4"
        >
          <FormGroupWrapper
            errorIds={
              Array [
                "cap-expiry",
              ]
            }
            errors={Array []}
          >
            <fieldset
              aria-describedby="cap-expiry-page-heading"
              className="govuk-fieldset"
            >
              <legend
                className="govuk-fieldset__legend govuk-fieldset__legend--l"
              >
                <h2
                  className="govuk-fieldset__heading"
                  id="cap-expiry-page-heading"
                >
                  When does the cap expire?
                </h2>
              </legend>
              <span
                className="govuk-hint"
                id="cap-expiry-hint"
              >
                We need to know the time that this cap would be valid until
              </span>
              <RadioConditionalInput
                fieldset={
                  Object {
                    "heading": Object {
                      "content": Any<String>,
                      "hidden": true,
                      "id": "cap-validity",
                    },
                    "radioError": Array [],
                    "radios": Array [
                      Object {
                        "defaultChecked": false,
                        "id": "cap-end-calendar",
                        "label": "At the end of a calendar day",
                        "name": "capValid",
                        "radioButtonHint": Object {
                          "content": "The cap applies to journeys made before midnight",
                          "id": "cap-end-calendar-hint",
                        },
                        "value": "endOfCalendarDay",
                      },
                      Object {
                        "dataAriaControls": "cap-expiry-end-of-service-required-conditional",
                        "defaultChecked": false,
                        "disableAutoSelect": true,
                        "id": "cap-end-of-service",
                        "inputErrors": Array [],
                        "inputHint": Object {
                          "content": "You can update your fare day end in operator settings",
                          "hidden": true,
                          "id": "product-end-time-hint",
                        },
                        "inputType": "text",
                        "inputs": Array [
                          Object {
                            "defaultValue": "",
                            "disabled": true,
                            "id": "product-end-time",
                            "label": "End time",
                            "name": "productEndTime",
                          },
                        ],
                        "label": "Fare day end",
                        "name": "capValid",
                        "radioButtonHint": Object {
                          "content": "The cap applies to journeys made during the 'fare day' as defined by your business rules",
                          "id": "cap-end-of-service-hint",
                        },
                        "value": "fareDayEnd",
                      },
                    ],
                  }
                }
                key="cap-validity"
              />
            </fieldset>
          </FormGroupWrapper>
        </div>
      </fieldset>
      <input
        name="id"
        type="hidden"
      />
      <input
        className="govuk-button govuk-!-margin-left-3"
        id="continue-button"
        type="submit"
        value="Continue"
      />
    </div>
  </CsrfForm>
</FullColumnLayout>
`;

exports[`pages create caps should render correctly on edit mode 1`] = `
<FullColumnLayout
  description="Create caps page of the Create Fares Data Service"
  errors={Array []}
  title="Create Caps - Create Fares Data Service"
>
  <CsrfForm
    action="/api/createCaps"
    csrfToken=""
    method="post"
  >
    <BackButton
      href="/viewCaps"
    />
    <ErrorSummary
      errors={Array []}
    />
    <h1
      className="govuk-heading-l"
      id="create-caps-page-heading"
    >
      Create your fare caps
    </h1>
    <span
      className="govuk-hint"
      id="create-cap-hint"
    >
      If cap duration is more than a day, provide input for the cap start.
    </span>
    <div
      className="govuk-grid-row"
    >
      <fieldset
        className="govuk-fieldset"
      >
        <legend
          className="govuk-fieldset__legend govuk-visually-hidden"
        >
          Enter details for cap
        </legend>
        <div
          className="flex-container"
        >
          <div
            className="govuk-!-margin-left-4 govuk-!-margin-right-2"
          >
            <FormGroupWrapper
              errorIds={
                Array [
                  "cap-name",
                ]
              }
              errors={Array []}
            >
              <label
                className="govuk-label"
                htmlFor="cap-name"
              >
                <span
                  className="govuk-visually-hidden"
                >
                  Cap Name
                </span>
                <span
                  aria-hidden={true}
                >
                  Cap name
                </span>
              </label>
              <span
                className="govuk-hint"
                id="cap-name-hint"
              >
                50 characters max
              </span>
              <FormElementWrapper
                errorClass="govuk-input--error"
                errorId="cap-name"
                errors={Array []}
                hideText={true}
              >
                <input
                  aria-describedby="cap-name-hint"
                  className="govuk-input govuk-input--width-40 govuk-product-name-input__inner__input"
                  defaultValue="Cap 1"
                  id="cap-name"
                  maxLength={50}
                  name="capName"
                  type="text"
                />
              </FormElementWrapper>
            </FormGroupWrapper>
          </div>
          <div
            className="govuk-!-margin-left-2 govuk-!-margin-right-2"
          >
            <FormGroupWrapper
              errorIds={
                Array [
                  "cap-price",
                ]
              }
              errors={Array []}
            >
              <label
                className="govuk-label"
                htmlFor="cap-price"
              >
                <span
                  className="govuk-visually-hidden"
                >
                  Cap Price, in pounds
                </span>
                <span
                  aria-hidden={true}
                >
                  Price
                </span>
              </label>
              <span
                className="govuk-hint"
                id="cap-price-hint"
              >
                e.g. 2.99
              </span>
              <div
                className="govuk-currency-input"
              >
                <div
                  className="govuk-currency-input__inner"
                >
                  <span
                    className="govuk-currency-input__inner__unit"
                  >
                    £
                  </span>
                  <FormElementWrapper
                    addFormGroupError={false}
                    errorClass="govuk-input--error"
                    errorId="cap-price"
                    errors={Array []}
                    hideText={true}
                  >
                    <input
                      aria-describedby="cap-price-hint"
                      className="govuk-input govuk-input--width-4 govuk-currency-input__inner__input"
                      data-non-numeric={true}
                      defaultValue="2"
                      id="cap-price"
                      name="capPrice"
                      type="text"
                    />
                  </FormElementWrapper>
                </div>
              </div>
            </FormGroupWrapper>
          </div>
          <div
            className="govuk-!-margin-left-2 govuk-!-margin-right-2"
          >
            <FormGroupWrapper
              errorIds={
                Array [
                  "cap-period-duration-quantity",
                  "cap-period-duration-unit",
                ]
              }
              errors={Array []}
            >
              <label
                className="govuk-label"
                htmlFor="cap-period-duration"
              >
                Cap duration
              </label>
              <span
                className="govuk-hint"
                id="cap-duration-hint"
              >
                For example, 3 days
              </span>
              <div
                className="govuk-input__wrapper expiry-selector-wrapper"
              >
                <FormElementWrapper
                  errorClass="govuk-input--error"
                  errorId="cap-period-duration-quantity"
                  errors={Array []}
                  hideText={true}
                >
                  <input
                    aria-describedby="cap-duration-hint"
                    className="govuk-input govuk-input--width-3"
                    defaultValue="2"
                    id="cap-period-duration-quantity"
                    name="capDuration"
                    type="text"
                  />
                </FormElementWrapper>
                <FormElementWrapper
                  errorClass="govuk-select--error"
                  errorId="cap-duration-unit"
                  errors={Array []}
                  hideText={true}
                >
                  <select
                    className="govuk-select govuk-select--width-3 expiry-selector-units"
                    defaultValue="month"
                    id="cap-duration-unit"
                    name="capDurationUnits"
                  >
                    <option
                      disabled={true}
                      key="select-one"
                      value=""
                    >
                      Select One
                    </option>
                    <option
                      key="day"
                      value="day"
                    >
                      Days
                    </option>
                    <option
                      key="week"
                      value="week"
                    >
                      Weeks
                    </option>
                    <option
                      key="month"
                      value="month"
                    >
                      Months
                    </option>
                  </select>
                </FormElementWrapper>
              </div>
            </FormGroupWrapper>
          </div>
        </div>
        <div
          className="govuk-!-margin-left-2 govuk-!-margin-right-2 govuk-!-margin-top-4"
        >
          <FormGroupWrapper
            errorIds={
              Array [
                "cap-expiry",
              ]
            }
            errors={Array []}
          >
            <fieldset
              aria-describedby="cap-expiry-page-heading"
              className="govuk-fieldset"
            >
              <legend
                className="govuk-fieldset__legend govuk-fieldset__legend--l"
              >
                <h2
                  className="govuk-fieldset__heading"
                  id="cap-expiry-page-heading"
                >
                  When does the cap expire?
                </h2>
              </legend>
              <span
                className="govuk-hint"
                id="cap-expiry-hint"
              >
                We need to know the time that this cap would be valid until
              </span>
              <RadioConditionalInput
                fieldset={
                  Object {
                    "heading": Object {
                      "content": Any<String>,
                      "hidden": true,
                      "id": "cap-validity",
                    },
                    "radioError": Array [],
                    "radios": Array [
                      Object {
                        "defaultChecked": false,
                        "id": "cap-end-calendar",
                        "label": "At the end of a calendar day",
                        "name": "capValid",
                        "radioButtonHint": Object {
                          "content": "The cap applies to journeys made before midnight",
                          "id": "cap-end-calendar-hint",
                        },
                        "value": "endOfCalendarDay",
                      },
                      Object {
                        "dataAriaControls": "cap-expiry-end-of-service-required-conditional",
                        "defaultChecked": false,
                        "disableAutoSelect": true,
                        "id": "cap-end-of-service",
                        "inputErrors": Array [],
                        "inputHint": Object {
                          "content": "You can update your fare day end in operator settings",
                          "hidden": true,
                          "id": "product-end-time-hint",
                        },
                        "inputType": "text",
                        "inputs": Array [
                          Object {
                            "defaultValue": "",
                            "disabled": true,
                            "id": "product-end-time",
                            "label": "End time",
                            "name": "productEndTime",
                          },
                        ],
                        "label": "Fare day end",
                        "name": "capValid",
                        "radioButtonHint": Object {
                          "content": "The cap applies to journeys made during the 'fare day' as defined by your business rules",
                          "id": "cap-end-of-service-hint",
                        },
                        "value": "fareDayEnd",
                      },
                    ],
                  }
                }
                key="cap-validity"
              />
            </fieldset>
          </FormGroupWrapper>
        </div>
      </fieldset>
      <input
        name="id"
        type="hidden"
        value={1}
      />
      <input
        className="govuk-button govuk-!-margin-left-3"
        id="continue-button"
        type="submit"
        value="Continue"
      />
    </div>
  </CsrfForm>
</FullColumnLayout>
`;

exports[`pages create caps should render correctly on input errors 1`] = `
<FullColumnLayout
  description="Create caps page of the Create Fares Data Service"
  errors={
    Array [
      Object {
        "errorMessage": "C name cannot have less than 2 characters",
        "id": "cap-name",
      },
    ]
  }
  title="Create Caps - Create Fares Data Service"
>
  <CsrfForm
    action="/api/createCaps"
    csrfToken=""
    method="post"
  >
    <ErrorSummary
      errors={
        Array [
          Object {
            "errorMessage": "C name cannot have less than 2 characters",
            "id": "cap-name",
          },
        ]
      }
    />
    <h1
      className="govuk-heading-l"
      id="create-caps-page-heading"
    >
      Create your fare caps
    </h1>
    <span
      className="govuk-hint"
      id="create-cap-hint"
    >
      If cap duration is more than a day, provide input for the cap start.
    </span>
    <div
      className="govuk-grid-row"
    >
      <fieldset
        className="govuk-fieldset"
      >
        <legend
          className="govuk-fieldset__legend govuk-visually-hidden"
        >
          Enter details for cap
        </legend>
        <div
          className="flex-container"
        >
          <div
            className="govuk-!-margin-left-4 govuk-!-margin-right-2"
          >
            <FormGroupWrapper
              errorIds={
                Array [
                  "cap-name",
                ]
              }
              errors={
                Array [
                  Object {
                    "errorMessage": "C name cannot have less than 2 characters",
                    "id": "cap-name",
                  },
                ]
              }
            >
              <label
                className="govuk-label"
                htmlFor="cap-name"
              >
                <span
                  className="govuk-visually-hidden"
                >
                  Cap Name
                </span>
                <span
                  aria-hidden={true}
                >
                  Cap name
                </span>
              </label>
              <span
                className="govuk-hint"
                id="cap-name-hint"
              >
                50 characters max
              </span>
              <FormElementWrapper
                errorClass="govuk-input--error"
                errorId="cap-name"
                errors={
                  Array [
                    Object {
                      "errorMessage": "C name cannot have less than 2 characters",
                      "id": "cap-name",
                    },
                  ]
                }
                hideText={true}
              >
                <input
                  aria-describedby="cap-name-hint"
                  className="govuk-input govuk-input--width-40 govuk-product-name-input__inner__input"
                  defaultValue=""
                  id="cap-name"
                  maxLength={50}
                  name="capName"
                  type="text"
                />
              </FormElementWrapper>
            </FormGroupWrapper>
          </div>
          <div
            className="govuk-!-margin-left-2 govuk-!-margin-right-2"
          >
            <FormGroupWrapper
              errorIds={
                Array [
                  "cap-price",
                ]
              }
              errors={
                Array [
                  Object {
                    "errorMessage": "C name cannot have less than 2 characters",
                    "id": "cap-name",
                  },
                ]
              }
            >
              <label
                className="govuk-label"
                htmlFor="cap-price"
              >
                <span
                  className="govuk-visually-hidden"
                >
                  Cap Price, in pounds
                </span>
                <span
                  aria-hidden={true}
                >
                  Price
                </span>
              </label>
              <span
                className="govuk-hint"
                id="cap-price-hint"
              >
                e.g. 2.99
              </span>
              <div
                className="govuk-currency-input"
              >
                <div
                  className="govuk-currency-input__inner"
                >
                  <span
                    className="govuk-currency-input__inner__unit"
                  >
                    £
                  </span>
                  <FormElementWrapper
                    addFormGroupError={false}
                    errorClass="govuk-input--error"
                    errorId="cap-price"
                    errors={
                      Array [
                        Object {
                          "errorMessage": "C name cannot have less than 2 characters",
                          "id": "cap-name",
                        },
                      ]
                    }
                    hideText={true}
                  >
                    <input
                      aria-describedby="cap-price-hint"
                      className="govuk-input govuk-input--width-4 govuk-currency-input__inner__input"
                      data-non-numeric={true}
                      defaultValue=""
                      id="cap-price"
                      name="capPrice"
                      type="text"
                    />
                  </FormElementWrapper>
                </div>
              </div>
            </FormGroupWrapper>
          </div>
          <div
            className="govuk-!-margin-left-2 govuk-!-margin-right-2"
          >
            <FormGroupWrapper
              errorIds={
                Array [
                  "cap-period-duration-quantity",
                  "cap-period-duration-unit",
                ]
              }
              errors={
                Array [
                  Object {
                    "errorMessage": "C name cannot have less than 2 characters",
                    "id": "cap-name",
                  },
                ]
              }
            >
              <label
                className="govuk-label"
                htmlFor="cap-period-duration"
              >
                Cap duration
              </label>
              <span
                className="govuk-hint"
                id="cap-duration-hint"
              >
                For example, 3 days
              </span>
              <div
                className="govuk-input__wrapper expiry-selector-wrapper"
              >
                <FormElementWrapper
                  errorClass="govuk-input--error"
                  errorId="cap-period-duration-quantity"
                  errors={
                    Array [
                      Object {
                        "errorMessage": "C name cannot have less than 2 characters",
                        "id": "cap-name",
                      },
                    ]
                  }
                  hideText={true}
                >
                  <input
                    aria-describedby="cap-duration-hint"
                    className="govuk-input govuk-input--width-3"
                    defaultValue=""
                    id="cap-period-duration-quantity"
                    name="capDuration"
                    type="text"
                  />
                </FormElementWrapper>
                <FormElementWrapper
                  errorClass="govuk-select--error"
                  errorId="cap-duration-unit"
                  errors={
                    Array [
                      Object {
                        "errorMessage": "C name cannot have less than 2 characters",
                        "id": "cap-name",
                      },
                    ]
                  }
                  hideText={true}
                >
                  <select
                    className="govuk-select govuk-select--width-3 expiry-selector-units"
                    defaultValue=""
                    id="cap-duration-unit"
                    name="capDurationUnits"
                  >
                    <option
                      disabled={true}
                      key="select-one"
                      value=""
                    >
                      Select One
                    </option>
                    <option
                      key="day"
                      value="day"
                    >
                      Days
                    </option>
                    <option
                      key="week"
                      value="week"
                    >
                      Weeks
                    </option>
                    <option
                      key="month"
                      value="month"
                    >
                      Months
                    </option>
                  </select>
                </FormElementWrapper>
              </div>
            </FormGroupWrapper>
          </div>
        </div>
        <div
          className="govuk-!-margin-left-2 govuk-!-margin-right-2 govuk-!-margin-top-4"
        >
          <FormGroupWrapper
            errorIds={
              Array [
                "cap-expiry",
              ]
            }
            errors={
              Array [
                Object {
                  "errorMessage": "C name cannot have less than 2 characters",
                  "id": "cap-name",
                },
              ]
            }
          >
            <fieldset
              aria-describedby="cap-expiry-page-heading"
              className="govuk-fieldset"
            >
              <legend
                className="govuk-fieldset__legend govuk-fieldset__legend--l"
              >
                <h2
                  className="govuk-fieldset__heading"
                  id="cap-expiry-page-heading"
                >
                  When does the cap expire?
                </h2>
              </legend>
              <span
                className="govuk-hint"
                id="cap-expiry-hint"
              >
                We need to know the time that this cap would be valid until
              </span>
              <RadioConditionalInput
                fieldset={
                  Object {
                    "heading": Object {
                      "content": Any<String>,
                      "hidden": true,
                      "id": "cap-validity",
                    },
                    "radioError": Array [],
                    "radios": Array [
                      Object {
                        "defaultChecked": false,
                        "id": "cap-end-calendar",
                        "label": "At the end of a calendar day",
                        "name": "capValid",
                        "radioButtonHint": Object {
                          "content": "The cap applies to journeys made before midnight",
                          "id": "cap-end-calendar-hint",
                        },
                        "value": "endOfCalendarDay",
                      },
                      Object {
                        "dataAriaControls": "cap-expiry-end-of-service-required-conditional",
                        "defaultChecked": false,
                        "disableAutoSelect": true,
                        "id": "cap-end-of-service",
                        "inputErrors": Array [],
                        "inputHint": Object {
                          "content": "You can update your fare day end in operator settings",
                          "hidden": true,
                          "id": "product-end-time-hint",
                        },
                        "inputType": "text",
                        "inputs": Array [
                          Object {
                            "defaultValue": "",
                            "disabled": true,
                            "id": "product-end-time",
                            "label": "End time",
                            "name": "productEndTime",
                          },
                        ],
                        "label": "Fare day end",
                        "name": "capValid",
                        "radioButtonHint": Object {
                          "content": "The cap applies to journeys made during the 'fare day' as defined by your business rules",
                          "id": "cap-end-of-service-hint",
                        },
                        "value": "fareDayEnd",
                      },
                    ],
                  }
                }
                key="cap-validity"
              />
            </fieldset>
          </FormGroupWrapper>
        </div>
      </fieldset>
      <input
        name="id"
        type="hidden"
      />
      <input
        className="govuk-button govuk-!-margin-left-3"
        id="continue-button"
        type="submit"
        value="Continue"
      />
    </div>
  </CsrfForm>
</FullColumnLayout>
`;
